# bigquery-comp

./: .env.example  .gitignore  README.md  config_models.yaml  docker-compose.yml  feedback.txt  pyproject.toml  requirements.txt
.streamlit/: config.toml
notebooks/: gcp_first_run.ipynb  gcp_upload_file.ipynb  missing_data_tests.ipynb
notebooks/workspace/: broken_submission.ipynb  gcp_add_boolean_column.ipynb  kaggle_data_cleaning_demo_submission.ipynb
server/: start_ollama.sh
src/gaby_agent/: app.py  orchestrating_agent.ipynb
src/gaby_agent/core/: config.py  pipeline.py  schema.py
src/gaby_agent/core/agent/: __init__.py  _core.py  _utils.py  cleaner.py  missing.py  prompt.py
src/gaby_agent/core/agent/tools/: ambig.py  statistical_methods.py
src/gaby_agent/core/gatekeeper/: __init__.py  _utils.py  _wrapper.py  cleaner.py  prompt.py
src/gaby_agent/core/knowledge_base/: priori.py
src/gaby_agent/data/input/: sample_customer_data.csv  sample_financial_data.csv  sample_sales_data.csv
tests/: test_core_agent__core.py  test_gatekeeper_core.py
